2003-05-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Validation.pm: Introduce new versioned variants
	of "Type: perl".  (Patch #725425)

2003-05-10  Max Horn  <max@quendi.de>

	* NetAccess.pm: Don't default to MasterFirst, but rather to MasterLast 
	  (using MasterFirst as long as the master mirror has not all files is
	  causing more pain than it helps).

2003-05-10  Rob Braun <bbraun@users.sourceforge.net>

	* PkgVersion.pm: When doing a fetch-* --dry-run, and the source
	  doesn't have a URL, ignore the entry.

2003-05-07  Ben Hines <benh57@users.sourceforge.net>

	* Bootstrap.pm: support 10.2.6
	
2003-05-07  Rob Braun <bbraun@users.sourceforge.net>

	* Config.pm, Engine.pm, Package.pm, PkgVersion.pm,
	  Services.pm, Validation.pm: Remove hard coded references
	  to 'powerpc'.  (Patch #732058)

	* PkgVersion.pm, Validation.pm: Add %m for machine architecture
	  string expansion.

2003-05-04  Max Horn  <max@quendi.de>

	* Bootstrap.pm: Added check_host and check_files, used by bootstrap.pl and
	  postinstall.pl (Patch #731980).

	* PkgVersion.pm: Explicitly invoke get_bsbase with its full qualified name,
	  Fink::Bootstrap::get_bsbase (Patch #731980).

2003-05-03  Max Horn  <max@quendi.de>

	* Validation.pm: Check for bad (DOS or Mac) line endings in .info / .patch
	  files, and also check for empty .patch files (Patch #731791).

2003-05-02  Max Horn  <max@quendi.de>

	* Validation.pm: Do not allow arbitrary license combinations, rather only a
	  fixed set (which we can extend as needed). See bug #670788. 

	* Services.pm: Warn if an .info file uses a field more than once (will soon
	  be turned into an error).

2003-04-26  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Fix multi line Depends/BuildDepends fields, and slightly
	  improve detection of malformed dependencies. 

2003-04-15	Ben Hines <benh57@users.sourceforge.net>

    * SelfUpdate.pm: Allow distribution upgrades to work (append fake revision)
    